@@ -1,3 +1,6 @@
+2005-05-13 Philippe April <philippe@ilesansfil.org>
+	* Added deployment status to node_list
+
 2005-05-10 Francois Proulx <francois.proulx@gmail.com>
 	* Added download button CSS class to style button
 	
